--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ install:
     - pip install -r requirements.txt
 
 before_script:
-    - source stackoverflow/.travis.sh
-    - psql -c "create database stackoverflow_api;" -U postgres
+    - psql -c "create database stackoverflow;" -U postgres
     - psql -c "create user postgres with password 'shema';" -U postgres
 
 script:
