--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
 
 
 script:
-    - pytest --cov=src --cov-config .coveragerc
+    - pytest --cov=StackOverflow-lite
 
 after_success:
     - coveralls
